--- a/gradient.html
+++ b/gradient.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=B612&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Background Generator</title>
 </head>
 <body id="grad">  
     <h1>Background Generator</h1>
